[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/NixStory/Narrative.gd" type="Script" id=1]
[ext_resource path="res://addons/NixGUI/TextPrinter.gd" type="Script" id=2]
[ext_resource path="res://addons/NixStory/nextMark.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/NixStory/se/soundslikewillem__a.wav" type="AudioStream" id=4]

[node name="Narrative" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextPrinter" type="RichTextLabel" parent="."]
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.6
bbcode_enabled = true
bbcode_text = "aaaaaaaaaaaaaaaadddddddddddasssssssssssssssssss"
visible_characters = 0
text = "aaaaaaaaaaaaaaaadddddddddddasssssssssssssssssss"
scroll_following = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="next" parent="TextPrinter" instance=ExtResource( 3 )]
visible = true

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="finish" from="TextPrinter" to="." method="_on_TextPrinter_finish"]
[connection signal="putChar" from="TextPrinter" to="." method="_on_TextPrinter_putChar"]
[connection signal="wait" from="TextPrinter" to="." method="_on_TextPrinter_wait"]
